Fix admin bar on mobile

--- a/sass/admin-bar.scss
+++ b/sass/admin-bar.scss
@@ -19,3 +19,5 @@
         top: 32px;
     }
 }
+
+.light-bold-adminbar{ position: fixed !important; }
